# SpaceshipBP

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
Game/: CMakeLists.txt
Game/3P-libs/RapidJSON/: rapidjson.cmake
Game/3P-libs/SFML/: SFML.cmake
Game/3P-libs/better-enums/: better-enums.cmake
Game/src/: main.cpp
Game/src/Core/: Application.cpp  Application.h  Config.h  Types.h  UserJsonConversions.h
Game/src/Core/Application/: Application.cpp  Application.h  ApplicationListenerHandling.cpp  ApplicationShortcuts.cpp  ApplicationShortcuts.h  ListenerHandling.cpp  LowLevelApplication.cpp  LowLevelApplication.h  WindowHandling.cpp
Game/src/Core/Application/Getters/: ConfigGetter.cpp  ConfigGetter.h  LevelProviderGetter.cpp  LevelProviderGetter.h  LogGetter.cpp  LogGetter.h  RandomGetter.cpp  RandomGetter.h  TextureProviderGetter.cpp  TextureProviderGetter.h
Game/src/Core/Application/ObjectsAggregator/: GetterConfig.cpp  GetterConfig.h  GetterFontProvider.cpp  GetterFontProvider.h  GetterLevelProvider.cpp  GetterLevelProvider.h  GetterLog.cpp  GetterLog.h  GetterMenuLayer.cpp  GetterMenuLayer.h  GetterRandom.cpp  GetterRandom.h  GetterTextureProvider.cpp  GetterTextureProvider.h  ObjectsAggregator.h
Game/src/Core/Config/: ApplicationConfigManager.cpp  ApplicationConfigManager.h  Config.cpp  Config.h  ConfigApplication.cpp  ConfigApplication.h  ConfigFile.h  ConfigLocalization.cpp  ConfigLocalization.h  ConfigLocalizationFileOperations.h  ConfigLocalizationLogLevel.h  ConfigLogs.h  ConfigSimulation.cpp  ConfigSimulation.h  ConfigWindow.h  Serializable.h
Game/src/Core/GameLayers/: MenuLayer.cpp  MenuLayer.h
Game/src/Core/MenuManager/: MenuManager.cpp  MenuManager.h  MenuManagerTemplates.h
Game/src/Core/Storage/: ApplicationConfig.h  GameJsonConversions.h  LocalizationRoot.h  RootConfig.h  RootLocalization.h  StorageRoot.cpp  StorageRoot.h  UserJsonConversions.h
Game/src/Core/Storage/Config/: ConfigApplication.h  ConfigFile.h  ConfigFont.h  ConfigFonts.h  ConfigLevel.h  ConfigLevels.h  ConfigLogs.h  ConfigPath.h  ConfigPlayer.h  ConfigPlayerCannon.h  ConfigResources.h  ConfigSimulation.h  ConfigSimulationKeys.h  ConfigTexture.h  ConfigTextures.h  ConfigWindow.h  GeneralConfig.h
Game/src/Core/Storage/Localization/: ApplicationLocalization.h  GeneralLocalization.h  LocApplication.h  LocFileOperations.h  LocLogLevel.h  LocSimulation.h  LocalizationFileOperations.h  LocalizationLogLevel.h
Game/src/Simulation/: Simulation.cpp  Simulation.h
Game/src/Simulation/ECS/: Component.h  ECS.h  Entity.h  System.h
Game/src/Simulation/ECS/BasicFeatures/CollisionDetection/: SCollisionDetector.h
Game/src/Simulation/ECS/Levels/: CLevelState.h  ELevelState.h  Level.cpp  Level.h  LevelProvider.cpp  LevelProvider.h  SLevelStateForwarder.cpp  SLevelStateForwarder.h
Game/src/Simulation/Entities/: Asteroid.h  EAsteroid.h  EBackground.h  EPlayer.cpp  EPlayer.h  ETimer.h  Player.h  Projectile.h  Timer.h
Game/src/Simulation/Features/Background/: EBackground.cpp  EBackground.h
Game/src/Simulation/Features/CollisionDetection/: SCollisionDetector.h
Game/src/Simulation/Features/DangerZone/: CDangerZoneParams.h  CDangerZoneStat.h  EDangerZone.h  SDangerZoneAsteroidSpawner.cpp  SDangerZoneAsteroidSpawner.h  SDangerZoneTracker.cpp  SDangerZoneTracker.h
Game/src/Simulation/Features/Movable/: CAppliedForces.h  CMass.h  CPosition.h  CSpeed.h  EntityMover.cpp  SEntityMover.h
Game/src/Simulation/Features/Player/: EPlayer.cpp  EPlayer.h  SInputReader.cpp  SInputReader.h
Game/src/Simulation/Features/Score/: CPlayerScore.h  SScoreTracker.cpp  SScoreTracker.h
Game/src/Simulation/Features/Shooting/: CCannon.h  CHitConfirmed.h  CRequestFire.h  EProjectile.h  SHandlerHit.cpp  SHandlerHit.h  SHandlerPlayerShoot.cpp  SHandlerPlayerShoot.h  SHitHandler.cpp  SHitHandler.h
Game/src/Simulation/Features/Timer/: CTimer.h  ETimer.cpp  ETimer.h  STimer.cpp  STimer.h
Game/src/Simulation/Features/Visual/: CSprite.h  SEntityDrawer.h
Game/src/Simulation/GameLevels/: Level1.cpp  Level1.h
Game/src/Simulation/GameLevels/Base/: Level.h  LevelBase.cpp  LevelBase.h  LevelCreatorsStorage.h  LevelProvider.cpp  LevelProvider.h
Game/src/Simulation/Levels/: Level.cpp  Level.h  Level1.cpp  Level1.h  LevelProvider.cpp  LevelProvider.h
Game/src/Simulation/Levels/Base/: LevelBase.cpp  LevelBase.h  LevelCreatorsStorage.h  LevelDataStorage.h  LevelProvider.cpp  LevelProvider.h
Game/src/UI/: BaseMenu.cpp  BaseMenu.h
Game/src/UI/Elements/: Button.h
Game/src/UI/Menus/: BaseMenu.cpp  BaseMenu.h  EndGameMenu.cpp  EndGameMenu.h  GameplayMenu.cpp  GameplayMenu.h  MainMenu.h  PauseMenu.h
Game/src/Utility/: Common.h  ResourcesCache.h  ResourcesProvider.h  Singleton.h  TypeTraits.h  Updatable.h
Game/src/Utility/EventsHandling/: BaseClasses.h  ListenersEmitters.h
Game/src/Utility/Logger/: Logger.cpp  Logger.h
Game/src/Utility/Math/: Math.h  Random.cpp  Random.h  Vectors.cpp  Vectors.h
Game/src/Utility/Math/Random/: Random.h
Game/src/Utility/Math/Vectors/: Vectors.cpp  Vectors.h  Vectors.hpp
Game/src/Utility/MemoryTextureStorage/: TextureProvider.cpp  TextureProvider.h
Game/src/Utility/MenuManager/: MenuManager.cpp  MenuManager.h  TemplateSpecializes.h
Game/src/Utility/Serialization/: ImplMacroses.h  ImplSerializable.h  ImplStdJsonConverters.h  ImptStdJsonConverters.h  Serializable.h  SerializableExternalTypes.h  StdJsonConverters.h
Game/src/Utility/SystemRelated/: SystemRelated.cpp  SystemRelated.h
Game/src/Utility/Visual/: FontProvider.cpp  FontProvider.h  FrameByFrame.cpp  FrameByFrame.h  PositionInRectangle.h  TextureProvider.cpp  TextureProvider.h  TexturesCache.h
Game/src/Utility/WindowsRelated/: WindowsRelated.cpp  WindowsRelated.h
GameTests/: CMakeLists.txt
GameTests/3P-libs/GTest/: googletest.cmake
GameTests/src/: Serialization.cpp  Utility.cpp
SpaceShipBP/: CMakeLists.txt
SpaceShipBP/libs/RapidJSON/: rapidjson.cmake
SpaceShipBP/src/Core/: Application.cpp  Config.cpp  main.cpp
SpaceShipBP/src/Core/include/: Application.h  Config.h
(+79 files in other folders)
